ping/k8s-yaml/ping.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ping
  labels:
    app: ping-pong
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
      - name: ping
        image: 'harbor.corp.local/ingress-test/ping:0.1'
        ports:
        - containerPort: 5000
          name: ping
